# WAZP

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  callbacks.py  contributing.html  contributing_link.html  genindex.html  getting_started.html  index.html  main.py  metadata_utils.py  notebook_add_event_tags.py  notebook_metadata.py  notebook_viz_metadata.py  objects.inv  pyproject.toml  readme_link.html  search.html  searchindex.js  start_wazp_server.sh  tox.ini
.doctrees/: contributing.doctree  contributing_link.doctree  environment.pickle  getting_started.doctree  index.doctree  readme_link.doctree
.github/workflows/: docs_build_and_deploy.yml  publish_docs.yml  test_and_deploy.yml
_sources/: index.rst.txt
_static/: documentation_options.js
dash_tutorial/: app_bar_plot.py  app_basic_callbacks_1.py  app_basic_callbacks_2.py  app_basic_callbacks_3.py  app_basic_callbacks_4.py  app_basic_callbacks_5.py  app_basic_callbacks_6.py  app_basic_callbacks_7.py  app_components.py  app_graph.py  app_markdown.py  app_table.py  app_table_bootstrap.py
docs/: requirements.txt
docs/source/: api_index.rst  conf.py  getting_started.md  index.rst
notebooks/: app_streamlit.py  notebook_viz_metadata.py
pages/: 01_metadata.py  02_ROI.py  03_pose_estimation.py  04_dashboard.py  home.py
sample_metadata/: fenraftspiderA_0.json  fenraftspiderA_1.json  fenraftspiderA_2.json  fenraftspiderA_3.json  fenraftspiderA_4.json  jwaspA_0.json  jwaspA_1.json  jwaspA_2.json  jwaspA_cockroach_0.json  jwaspA_control_0.json  jwaspA_resources_moved_waterbackleftnectarbackright_0.json  jwaspA_resources_moved_waterbackleftnectarbackright_1.json  jwaspA_resources_moved_waterbackleftnectarbackright_2.json  master-list-sample.csv  master-list-sample.json  master-list.csv  master-list.xlsx
sample_project/: input_config.yaml  master-list-sample.csv  master-list.csv  metadata_fields.yaml
sample_project/pose_estimation_results/: jwaspE_nectar-open-close_wateronly_sDLC_resnet50_jwasp_femaleandmaleSep12shuffle1_1000000.h5  jwaspI_nectar-open-close_wateronly_sDLC_resnet50_jwasp_femaleandmaleSep12shuffle1_1000000.h5  jwaspJ_nectar-open-close_controlDLC_resnet50_jwasp_femaleandmaleSep12shuffle1_1000000.h5  jwaspJ_nectar-open-close_wateronly_sDLC_resnet50_jwasp_femaleandmaleSep12shuffle1_1000000.h5  jwaspK_nectar-open-close_wateronly_sDLC_resnet50_jwasp_femaleandmaleSep12shuffle1_1000000.h5  jwaspO_nectar-open-close_controlDLC_resnet50_jwasp_femaleandmaleSep12shuffle1_1000000.h5  (+1 more)
sample_project/videos/: jwaspE_nectar-open-close.avi  (+116 more)
sample_project_2/: input_config.yaml
sample_project_cfg/: input_config.json  input_config.yaml
wazp/: __init__.py  app.py  callbacks.py  datasets.py  utils.py
(+100 files in other folders)
